# college_simulator

./: CMakeLists.txt  README.md  admission_q.h  all_students.h  fetch.c  game_save.h  game_time.h  gtk.c  hud.h  library.h  main.c  polynomial.h  teachers.h
databases/: admissionQueue.txt  borrowed_books.txt  game_save.txt  lib_art.txt  library_books.txt  students.txt  teachers.txt
